# libheinz

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
doc/: Heinz.xcf
headers/: CMakeLists.txt  Complex.h  Vectors3D.h
inc/: CMakeLists.txt
inc/heinz/: Complex.h  Vectors3D.h
test/: CMakeLists.txt  CVectorTest.cpp  KVectorTest.cpp  PROVENANCE
